--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,13 +1,16 @@
 name: Cypress Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v3
 
       - name: Setup Node.js
@@ -15,8 +18,8 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: npm install
 
-      - name: Run Cypress tests
-        run: npx cypress run
+      - name: Run Registration Test
+        run: npx cypress run --spec "cypress/e2e/Registration/registration.cy.js"
