--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,10 +1,8 @@
 name: Cypress Tests
-
 on:
   push:
     branches:
       - main
-
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -23,3 +21,6 @@ jobs:
 
       - name: Run Registration Test
         run: npx cypress run --spec "cypress/e2e/Registration/registration.cy.js"
+
+      - name: Run All Cypress Tests
+        run: npx cypress run --reporter mochawesome --reporter-options reportDir=cypress/reports,overwrite=false,html=false,json=true
